# ThreadScheduler

./: CMakeLists.txt  README.md  Sln_Build.bat  Sln_Open.bat  ThreadScheduler.sln
ThreadScheduler/: CMakeLists.txt  Source.cpp  ThreadScheduler.vcxproj  ThreadScheduler.vcxproj.filters
ThreadScheduler/headers/: group_tasks.h  partition_tasks.h  thread_pool.h
ThreadScheduler/includes/: thread_pool_includes.h
ThreadScheduler/pch/: pch.h
ThreadScheduler/src/: functional_tools_inline.h  group_tasks_inline.h  partition_tasks_inline.h  thread_pool_inline.h
