# Set CMake Requirements
cmake_minimum_required( VERSION 3.6 )
# option(BUILD_SHARED_LIBS "Build shared libraries (.dll/.so) instead of static ones (.lib/.a)" OFF)


# Import External Functions
include( HelperFunctions.cmake )


# Set Debugging Controls
set( ENABLE_FILE_PRINTOUTS  True )
set( ENABLE_PATH_PRINTOUTS  True )


#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
#           Compile Definitions
#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
# add_compile_definitions()


#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
#              Functions - Shift Out To Helper File
#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
# Debug Printout
function( PrintPath Description PathString )
	if ( ENABLE_PATH_PRINTOUTS )
		message( ${Description} ${PathString} )
	endif()
endfunction()


# Set Warning Exclusions
# Format Of String In List: "/ignore:4297"
function( ExcludeWarnings, WarningStringList )
	foreach( WarningString  ${WarningValueList} )
		set_target_properties( ${PROJECT_NAME}  PROPERTIES  LINK_FLAGS  ${WarningString} )
	endforeach()
endfunction()


#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
#          Project Definitions
#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
# Set Project Name
project( ThreadScheduler )


# Set Compiler Settings
set( CMAKE_CXX_STANDARD 20 )
set( CMAKE_CXX_StANDARD_REQUIRED ON )


# Define Root Directory
set( ROOT_FILE_PATH  "${CMAKE_SOURCE_DIR}" )
set( SOURCE_FILE_PATH  "${CMAKE_SOURCE_DIR}/ThreadScheduler" )
set( MAIN_FILTER "Source Files" )


# Define Files/Paths To Exclude
set(
	Exclude_List
	"${ROOT_FILE_PATH}/build/CMakeFiles/*"
	#"${SOURCE_FILE_PATH}/ThreadScheduler/Source.cpp" # Remove "Source.cpp" Cause Its Added Later As Executable File
)

message("Root Path: "  ${ROOT_FILE_PATH})


# Recursively Grab All Files (.c/.cpp/.h) Down From Directory
# Also Grab x64 Stuff
file(
	GLOB_RECURSE Source_File_List 
	LIST_DIRECTORIES false
	"${ROOT_FILE_PATH}/*.c"
	"${ROOT_FILE_PATH}/*.cpp"
	"${ROOT_FILE_PATH}/*.h"
	"${ROOT_FILE_PATH}/build/x64/*"
)


# Assign PCH File To PCH_Header_File To Be Registered Later - MAYBE SHIFT TO THE TOP NEXT TIME AS INITIALIZATION
set( PCH_Header_File  "${SOURCE_FILE_PATH}/pch/pch.h" )


# Remove All Files Contained Within The "${CMAKE_SOURCE_DIR}/build"
# Folder That Was Generated By CMAKE 
foreach( File  ${Source_File_List} )
	foreach( ExcludedFile  ${Exclude_List} )
		if ( ${File}  MATCHES  ${ExcludedFile} )
			list( REMOVE_ITEM  Source_File_List  ${File} )
		endif()
	endforeach()
endforeach()


# Print All Directories
if ( ENABLE_FILE_PRINTOUTS )
	message( "Displaying All Directories:" )
	foreach( Source_File  IN ITEMS  ${Source_File_List} )
		message( "\tDirectory: "  ${Source_File} )
	endforeach()
endif()


# Add Each File To Solution Directory - All These Are
# Dependent On Folder Categorization
	# <FolderName>                                 <FilterName>
	  # Example.cpp        ---Generates--->        # Example.cpp
	  # Example.h								                   # Example.h
# **Note:
	# Multiple Files In A Single Folder Will Be Grouped
	# In The Same Filter, *Possibly* Overwriting Manually
	# Created Filters In The .sln
foreach( Source_File  IN ITEMS  ${Source_File_List} )
	# Outer Path
    get_filename_component( Source_Path  "${Source_File}"  PATH )
	PrintPath( "Source Path: "  "${Source_Path}" )

	# Relative Path
	file( RELATIVE_PATH  Relative_Source_Path  "${SOURCE_FILE_PATH}"  "${Source_Path}" )
	PrintPath( "RelativePath: "  "${Relative_Source_Path}" )

	string( REPLACE  "/" "\\"  Group_Path  "${Relative_Source_Path}" )
	source_group( "${MAIN_FILTER}/${Group_Path}"  FILES  "${Source_File}" )
	PrintPath( "Group Path: "  "${Group_Path}\n" )
endforeach()


# Add Build Files To Solution Directory In VS - CMake & .bat Files
set(
	Build_Files
	${ROOT_FILE_PATH}/CMakeLists.txt
)
source_group( ${MAIN_FILTER}  FILES  ${Build_Files} )


# Add Main To Solution Directory In VS
source_group( ${MAIN_FILTER}  FILES  "${CMAKE_SOURCE_DIR}/Source.cpp" )

# Set Source.cpp as Main Executable File
# Change Director As Required
add_executable( ${PROJECT_NAME}  "${CMAKE_SOURCE_DIR}/ThreadScheduler/Source.cpp"  ${Source_File_List} )

# Set Current Project As "Startup Project"
set_property( DIRECTORY  ${CMAKE_CURRENT_SOURCE_DIR}  PROPERTY  VS_STARTUP_PROJECT  ${PROJECT_NAME} )


# Set Project's Platform Toolset Version
set_target_properties( ${PROJECT_NAME}  PROPERTIES  VS_PLATFORM_TOOLSET  "v142" )


# Add PCH To Header Files
target_precompile_headers( ${PROJECT_NAME}  PUBLIC  ${PCH_Header_File} )